--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@types/fhir": "^0.0.41",
+    "clipboardy": "^4.0.0",
     "fhir": "^4.12.0",
     "jszip": "^3.10.1",
     "node-fetch": "^3.3.2",
