--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "clipboardy": "^4.0.0",
     "fhir": "^4.12.0",
     "jszip": "^3.10.1",
+    "mime-types": "^3.0.1",
     "node-fetch": "^3.3.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/mime-types": "^3.0.1",
     "@types/node": "^24.3.0",
     "ts-node": "^10.9.2"
   }
